--- a/west-side-soul/005 - Hotel California.html
+++ b/west-side-soul/005 - Hotel California.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-<div class="two-columns">
 <h3>VERSE 1</h3>
 <verse>
 [Bm]On a dark desert highway, [F#]cool wind in my hair
@@ -35,8 +34,7 @@ Such a [F#]lovely place (such a lovely place), such a [Bm7]lovely face.
 Any [Em]time of year (any time of year) you can [F#]find it here
 </verse>
 
-<div class="keep-together">
-<h3>VERSE 2</h3>
+<h3 class="page-break">VERSE 2</h3>
 
 <verse>
 Her mind is Tiffany-twisted, she got the Mercedes bends
@@ -51,9 +49,7 @@ And still those voices are calling from far away,
 Wake you up in the middle of the night
 Just to hear them say...
 </verse>
-</div>
 
-<div class="keep-together">
 <h3>CHORUS 2</h3>
 <verse>
 Welcome to the Hotel California
@@ -62,7 +58,6 @@ Such a lovely face.
 They livin' it up at the Hotel California
 What a nice surprise (what a nice surprise), bring your alibis
 </verse>
-</div>
 
 <h3>VERSE 3</h3>
 
@@ -83,5 +78,8 @@ I had to find the passage back to the place I was before
 You can check out any time you like,
 But you can never leave!'
 </verse>
-</div>
+
+</body>
+</html>
+
 
