--- a/west-side-soul/006 - The Weight.html
+++ b/west-side-soul/006 - The Weight.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>The Weight</title>
 <meta name="artist" value="Jamie Robbie Robertson AND the band">
+<meta name="songid" value="6">
 </head>
 <body>
 
