--- a/west-side-soul/007 - Old Dan Tucker.html
+++ b/west-side-soul/007 - Old Dan Tucker.html
@@ -5,6 +5,12 @@
 <title>Old Dan Tucker</title>
 <meta name="artist" value="Bruce Springsteen">
 <meta name="songid" value="7">
+<style>
+.column-break {
+  break-before: column;
+  margin-top: 0;
+}
+</style>
 </head>
 <body>
 
@@ -25,15 +31,13 @@ And [G]died with a toothache [C]in his heel
 [G]You're too late to [C]get your supper
 </verse>
 
-<div class="keep-together">
-<h3>VERSE 2</h3>
+<h3 class="column-break">VERSE 2</h3>
 <verse>
 Old Dan Tucker come to town
 Riding a billy goat, leading a hound
 The hound dog barked and billy goat jumped
 And landed old Tucker on a stump
 </verse>
-</div>
 
 <h3>VERSE 3</h3>
 <verse>
@@ -52,7 +56,6 @@ Then to the gal that he loved best
 </verse>
 
 <p>(Repeat CHORUS x2)
-</div>
 </body>
 </html>
 
