--- a/west-side-soul/011 - Galway Girl.html
+++ b/west-side-soul/011 - Galway Girl.html
@@ -5,6 +5,7 @@
 <title>Galway Girl</title>
 <meta name="artist" value="Steve Earle / Sharon Shannon">
 <meta name="source" value="https://tabs.ultimate-guitar.com/s/steve_earle/galway_girl_crd.htm">
+<meta name="songid" value="11">
 </head>
 <body>
 <p><i>*With a mandoline is best!</i>
