--- a/west-side-soul/013 - Blind Man.html
+++ b/west-side-soul/013 - Blind Man.html
@@ -5,9 +5,15 @@
 <title>Blind Man</title>
 <meta name="artist" value="Tim Long">
 <meta name="songid" value="13">
+<style>
+.column-break {
+  break-before: column;
+  margin-top: 0;
+}
+</style>
 </head>
 <body>
-<p><i>*Can modify lyrics to theme of group's choosing</i>
+<p><i>*Can modify lyrics to theme of group&apos;s choosing</i>
 
 <h3>VERSE 1</h3>
 <verse>
@@ -16,8 +22,8 @@ B[Am]lindman st[G]ood by the r[F]oad and he c[E7]ried  (clap clap clap)
 B[Am]lindman st[G]ood by the r[F]oad and he c[E7]ried  (clap clap clap)
 </verse>
 
+<br/>
 <div class="columns2">
-<div class="keep-together">
 <h3>CHORUS</h3>
 <verse>
 He cried, w[E7]hoa!
@@ -42,10 +48,8 @@ They cried, whoa!
 Show us the life, (x3)
 The way to go home.
 </verse>
-</div>
 
-<br/>
-<h3>VERSE 4</h3>
+<h3 class="column-break">VERSE 4</h3>
 <verse>
 Jesus hung on the cross and He cried (x3)
 He cried, whoa!
