--- a/west-side-soul/015 - Poison and Wine.html
+++ b/west-side-soul/015 - Poison and Wine.html
@@ -1,76 +1,97 @@
+<html>
+<head>
+<link rel="stylesheet" href="app.css"/>
+<script src="app.js" type="text/javascript"></script>
+<title>Poison and Wine</title>
+<meta name="artist" value="The Civil Wars">
+<meta name="songid" value="15">
+</head>
+<body>
 
-"Poison & Wine"
-
-Capo 6
-
-e|-------3-------3-------3-------|
+<pre style="float:right">e|-------3-------3-------3-------|
 B|-------3-------3-------3-------|
 G|-------0-------2-------0-------|
 D|-------0-------0-------2-------|
 A|-------2-------0-------3-------|
 E|-------3-------2-------0-------|
          G      D/F#   Cadd9        
+</pre>
+
+<p><i>Capo 6</i>
+
+<h3>INTRO</h3>
+<pre>G  D/F#  Cadd9</pre>
 
 
- [Intro]
- 
- G  D/F#  Cadd9
+<h3>VERSE 1</h3>
+<verse two-line>
+    G               D/F#        Cadd9
+You only know what I want you to, 
+        G                   D/F#      Cadd9
+I know everything you don't want me to.
+        G                     D/F#       Cadd9
+Oh your mouth is poison, your mouth is wine...
+       G                         D/F#      Cadd9
+Oh you think your dreams are the same as mine...
+</verse>
 
- [Verse 1]
+<br/>
+<div class="columns2">
+<h3>CHORUS</h3>
+<verse two-line>
+   G                       D/F# 
+Oh I don't love you, but I always will, 
+ Cadd9                            D/F#
+Oh I don't love you, but I always will.
+G                       D/F#
+I don't love you, but I always will, 
+  Cadd9
+I always, will..
+</verse>
 
-     G               D/F#        Cadd9
- You only know what I want you to, 
-         G                   D/F#      Cadd9
- I know everything you don't want me to.
-         G                     D/F#       Cadd9
- Oh your mouth is poison, your mouth is wine...
-        G                         D/F#      Cadd9
- Oh you think your dreams are the same as mine...
+<h3>VERSE 2</h3>
+<verse two-line>
+  G                         D/F#       Cadd9
+I wish you'd hold me when I turn my back,
+        G                D/F#          Cadd9
+ooh the less I give, the more I get back...
+        G                    D/F#         Cadd9
+Oh your hands can heal, your hands can bruise,
+        G                  D/F#           Cadd9
+I don't have a choice, but I still choose you...
+</verse>
 
+<div class="keep-together" style="margin-left: 0.5in">
+<h3>CHORUS + OUTRO</h3>
+<verse two-line>
+   G                       D/F#
+Oh I don't love you, but I always will,
+  Cadd9                          D/F#
+Oh I don't love you, but I always will...
+G                       D/F#
+I don't love you, but I always will, 
+  Cadd9                          D/F# 
+Oh I don't love you, but I always will.
+G                       D/F#        
+I don't love you, but I always will,
+ Cadd9                         D/F#
+I don't love you, but I always will.
+G                       D/F#       
+I don't love you, but I always will,
+  Cadd9
+I always will.
+  G           D/F#
+I always, will...
+  Cadd9        
+I always, will...
+  G           D/F#
+I always, will...
+  Cadd9
+I always, will...
+</verse>
+</div>
+</div>
 
- [Chorus]
+</body>
+</html>
 
-    G                       D/F# 
- oh I don't love you, but I always will, 
-  Cadd9                            D/F#
- oh I don't love you, but I always will.
- G                       D/F#
- I don't love you, but I always will, 
-   Cadd9
- I always, will..
-
-
- [Verse 2]
-
-   G                         D/F#       Cadd9
- I wish you'd hold me when I turn my back,
-         G                D/F#          Cadd9
- ooh the less I give, the more I get back...
-         G                    D/F#         Cadd9
- Oh your hands can heal, your hands can bruise,
-         G                  D/F#           Cadd9
- I don't have a choice, but I still choose you...
-
-
- [Chorus]
-
-    G                       D/F#
- Oh I don't love you, but I always will,
-   Cadd9                          D/F#
- oh I don't love you, but I always will...
- G                       D/F#
- I don't love you, but I always will, 
-   Cadd9                          D/F# 
- oh I don't love you, but I always will.
- G                       D/F#        Cadd9                           D/F#
- I don't love you, but I always will, I don't love you, but I always will.
- G                       D/F#           Cadd9
- I don't love you, but I always will, I always, will.
-   G           D/F#
- I always, will...
-   Cadd9        
- I always, will...
-   G           D/F#
- I always, will...
-   Cadd9
- I always, will...
