--- a/west-side-soul/016 - All Star.html
+++ b/west-side-soul/016 - All Star.html
@@ -5,21 +5,31 @@
 <title>All Star</title>
 <meta name="artist" value="Smashmouth">
 <meta name="songid" value="16">
+<style>
+h3 { margin-bottom: 0; padding-bottom: 0; }
+.lyrics { margin: 0; }
+</style>
+<!-- XXX check formatting -->
 </head>
 <body>
+<!--
 <p><i>** Am is optional in strumming pattern</i>
+-->
 <div class="columns2">
 <h3>VERSE 1</h3>
 
 <verse>
-Some[G]body once [D]told me the [Am]world is gonna [C]roll me
+Some[G]body once [D]told me
+The [Am]world is gonna [C]roll me
 I [G]ain't the sharpest [D]tool in the [Am]shed   [C]
-She was [G]looking kind of [D]dumb with her [Am]finger and her [C]thumb
+She was [G]looking kind of [D]dumb
+With her [Am]finger and her [C]thumb
 In the [G]shape of an [D]"L" on her fore[Am]head  [C]
 </verse>
 
 <verse>
-We[G]ll the years start coming and they[D] don't stop coming
+We[G]ll the years start coming
+And they[D] don't stop coming
 [Am]Back to the rules and I h[C]it the ground running
 Di[G]dn't make sense not to li[D]ve for fun
 Your[Am] brain gets smart but yo[C]ur head gets dumb
@@ -32,13 +42,15 @@ You[Am]'ll never shine if you d[C]on't glow
 <h3>CHORUS</h3>
 
 <verse>
-[G]Hey now you're an A[D]ll Star get [Am]your game on, g[C]o play
-[G]Hey now you're a Ro[D]ck Star get [Am]the show on get[C] paid
+[G]Hey now you're an A[D]ll Star
+Get [Am]your game on, g[C]o play
+[G]Hey now you're a Ro[D]ck Star
+Get [Am]the show on get[C] paid
 [G]And all that g[D]litters is g[Am]old
 [C]Only shooting st[G]ars br[F]eak the mol[C]d
 </verse>
 
-<h3>VERSE 2</h3>
+<h3 class="column-break">VERSE 2</h3>
 
 <verse>
 It's a cool place and they say it gets colder
@@ -46,7 +58,8 @@ You're bundled up now, wait till you get older
 But the meteor men beg to differ
 Judging by the hole in the satellite picture
 The ice we skate is getting pretty thin
-The water's getting warm so you might as well swim
+The water's getting warm
+So you might as well swim
 My world's on fire, how about yours?
 That's the way I like it and I never get bored
 </verse>
@@ -56,13 +69,15 @@ That's the way I like it and I never get bored
 <h3>VERSE 3</h3>
 
 <verse>
-Somebody once asked could I spare some change for gas?
+Somebody once asked could
+I spare some change for gas?
 I need to get myself away from this place
 I said yep what a concept
 I could use a little fuel myself
 And we could all use a little change
 
-Well, the years start coming and they don't stop coming
+Well, the years start coming
+And they don't stop coming
 Fed to the rules and I hit the ground running
 Didn't make sense not to live for fun
 Your brain gets smart but your head gets dumb
