--- a/west-side-soul/017 - Louie Louie Oh Baby.html
+++ b/west-side-soul/017 - Louie Louie Oh Baby.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Louie, Louie (Oh Baby)</title>
 <meta name="artist" value="The Kingsman">
+<meta name="songid" value="17">
 </head>
 <body>
 
