--- a/west-side-soul/019 - Hey Hey Were the Monkees.html
+++ b/west-side-soul/019 - Hey Hey Were the Monkees.html
@@ -11,7 +11,8 @@
 <div class="columns2">
 <verse>
 Here we [Am]come, walkin' down the [F]street
-We get the funniest [D]looks from, everyone we [G]meet
+We get the funniest [D]looks from
+Everyone we [G]meet
 </verse>
 
 <h3>CHORUS</h3>
@@ -41,8 +42,7 @@ We're the young generation
 And we've got something to say, oh
 </verse>
 
-<div class="keep-together">
-<h3>VERSE 3</h3>
+<h3 class="column-break">VERSE 3</h3>
 
 <verse>
 Any [Am]time or any[F]where
@@ -64,7 +64,6 @@ Come and watch us sing and play
 We're the young generation
 And we've got something to say
 </verse>
-</div>
 
 <h3>VERSE 5</h3>
 
