--- a/west-side-soul/021 - Time of Your Life.html
+++ b/west-side-soul/021 - Time of Your Life.html
@@ -53,8 +53,8 @@ Em            D            C             G
 For what it's worth it was worth all the while
 </verse>
 
+<br/>
 <div class="columns2">
-<div class="keep-together">
 <p>(CHORUS)
 
 <pre>
@@ -66,10 +66,8 @@ G G C D
 Em  D  C  G
 Em  D  C  G
 </pre>
-</div>
 
-<div class="keep-together">
-<p>(CHORUS strummed)
+<p class="column-break">(CHORUS strummed)
 
 <pre>
 [Interlude]
@@ -85,7 +83,6 @@ G G Cadd9 D
 G G Cadd9 D
 G
 </pre>
-</div>
 </div>
 
 <!--
