--- a/west-side-soul/022 - Wonderwall.html
+++ b/west-side-soul/022 - Wonderwall.html
@@ -31,7 +31,6 @@ About you [Cadd9   Dsus4 A7sus4]now
 About you [Em7   G Dsus4 A7sus4]now
 </verse>
 
-<div class="keep-together">
 <h3>BRIDGE</h3>
 <verse>
 And [Cadd9]all the roads we [Dsus4]have to walk are [Em7]winding
@@ -39,9 +38,8 @@ And [Cadd9]all the lights that [Dsus4]lead us there are [Em7]blinding
 [Cadd9]There are many [Dsus4]things that I would [G]like to [G/F#]say to [Em7]you,
 But I [Dsus4]don't know [A7sus4]how
 </verse>
-</div>
 
-<h3>CHORUS</h3>
+<h3 class="column-break">CHORUS</h3>
 <verse>
 Because [Cadd9]maybe [Em7  G]
 [Em7]You're gonna be the one that
