--- a/west-side-soul/026 - Hang On Sloopy.html
+++ b/west-side-soul/026 - Hang On Sloopy.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Hang On Sloopy</title>
 <meta name="artist" value="The McCoys">
+<meta name="songid" value="26">
 </head>
 <body>
 
@@ -32,7 +33,6 @@ And so I sing out
 <p>(CHORUS)
 
 <div class="columns2">
-<div class="keep-together">
 <h3>VERSE 2</h3>
 <verse>
 Sloopy wears a red dress, yeah
@@ -42,15 +42,13 @@ You know it gives me the chills
 
 Sloopy when I see you walking, 
 walking down the street
-I say don't worry sloopy, girl
+I say don't worry Sloopy, girl
 You belong to me and so I sing out
 </verse>
 
 <p>(CHORUS)
-</div>
 
-<div class="keep-together">
-<h3>VERSE 3 + BRIDGE</h3>
+<h3 class="column-break">VERSE 3 + BRIDGE</h3>
 <verse>
 Sloopy let your hair down, girl
 Let it hang down on me
@@ -62,14 +60,17 @@ Oh come on Sloopy (come on, come on)
 Oh come on Sloopy (come on, come on)
 Oh come on Sloopy (come on, come on)
 
-Well it feels so good (come on, come on)
-You know it feels so good (come on, come on)
-Well shake it, shake it, shake it sloopy (come on, come on)
-Shake it, shake it, shake it yeah (come on, come on) (Scream)
+Well it feels so good
+(Come on, come on)
+You know it feels so good
+(Come on, come on)
+Well shake it, shake it, shake it Sloopy
+(Come on, come on)
+Shake it, shake it, shake it yeah
+(Come on, come on) (Scream)
 </verse>
 
 <p>(CHORUS)
-</div>
 </div>
 
 </body>
