--- a/west-side-soul/027 - Iris.html
+++ b/west-side-soul/027 - Iris.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Iris</title>
 <meta name="artist" value="Goo Goo Dolls">
+<meta name="songid" value="27">
 </head>
 <body>
 
