--- a/west-side-soul/028 - Johnny B. Goode.html
+++ b/west-side-soul/028 - Johnny B. Goode.html
@@ -5,6 +5,7 @@
 <title>Johnny B. Goode</title>
 <meta name="artist" value="Chuck Barry">
 <meta name="source" value="https://tabs.ultimate-guitar.com/c/chuck_berry/johnny_b_goode_ver3_crd.htm">
+<meta name="songid" value="28">
 </head>
 <body>
 
