--- a/west-side-soul/031 - If I Ever Leave This World Alive.html
+++ b/west-side-soul/031 - If I Ever Leave This World Alive.html
@@ -5,6 +5,7 @@
 <title>If I Ever Leave This World Alive</title>
 <meta name="artist" value="Flogging Molly">
 <meta name="source" value="https://tabs.ultimate-guitar.com/f/flogging_molly/if_i_ever_leave_this_world_alive_crd.htm">
+<meta name="songid" value="31">
 </head>
 <body>
 
@@ -84,8 +85,7 @@ E|--------------------------------|
       Just before you go insane
 -->
 
-<div class="keep-together">
-<h3>BRIDGE</h3>
+<h3 class="column-break">BRIDGE</h3>
 <verse two-line>
            A
 So when in doubt just call my name
@@ -98,7 +98,6 @@ Hey, I may never leave this world
          D               A       D   A 
 But if I ever leave this world alive...she says
 </verse>
-</div>
 
 
 <h3>VERSE 3</h3>
