--- a/west-side-soul/034 - Big Rock Candy Mountain.html
+++ b/west-side-soul/034 - Big Rock Candy Mountain.html
@@ -5,6 +5,8 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Big Rock Candy Mountain</title>
 <meta name="artist" value="Harry McClintock">
+<!-- XXX check chords -->
+<meta name="songid" value="34">
 </head>
 <body>
 
