--- a/west-side-soul/035 - Ill Fly Away.html
+++ b/west-side-soul/035 - Ill Fly Away.html
@@ -5,6 +5,7 @@
 <title>I'll Fly Away</title>
 <meta name="artist" value="Traditional">
 <meta name="source" value="https://tabs.ultimate-guitar.com/m/misc_traditional/ill_fly_away_crd.htm">
+<meta name="songid" value="35">
 </head>
 <body>
 
