--- a/west-side-soul/038 - If I Had a Hammer.html
+++ b/west-side-soul/038 - If I Had a Hammer.html
@@ -5,6 +5,7 @@
 <title>If I Had a Hammer</title>
 <meta name="artist" value="Peter, Paul and Mary">
 <meta name="songid" value="38">
+<!-- XXX review chords -->
 </head>
 <body>
 
@@ -43,9 +44,8 @@ And my sisters
 All over this land, oh
 </verse>
 
-<br/>
 <verse>
-If I had a song
+[]If I had a song
 I'd sing it in the morning
 I'd sing it in the evening
 All over this land
