--- a/west-side-soul/039 - Ring of Fire.html
+++ b/west-side-soul/039 - Ring of Fire.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Ring of Fire</title>
 <meta name="artist" value="Johnny Cash">
+<meta name="songid" value="39">
 </head>
 <body>
 
