--- a/west-side-soul/041 - I Just Called To Say I Love You.html
+++ b/west-side-soul/041 - I Just Called To Say I Love You.html
@@ -5,6 +5,8 @@
 <script src="app.js" type="text/javascript"></script>
 <title>I Just Called To Say I Love You</title>
 <meta name="artist" value="Stevie Wonder">
+<!-- XXX review chords -->
+<meta name="songid" value="41">
 </head>
 <body>
 
@@ -16,26 +18,26 @@
 C                  G      C     G 
 No New Year`s day, to celebrate, 
              C                    
-no chocolate covered candy hearts
+No chocolate covered candy hearts
          DmM7
-to give away. 
+To give away. 
             Dm      DmM7       Dm   DmM7                   
 No first of spring, no song to sing, 
         Dm                  G        C
-in fact here`s just another ordinary day. 
+In fact here`s just another ordinary day. 
 </verse>
 
 <verse two-line nochords>
 C                 G       C    G                   
 No April rain, no flowers bloom, 
            C                            Dm  DmM7
-no wedding Saturday within the month of June. 
+No wedding Saturday within the month of June. 
             Dm  DmM7         Dm  DmM7                  
 But what it is, is something true, 
            Dm                     G   
-made up of these three words that I must
+Made up of these three words that I must
        C
-say to you. 
+Say to you. 
 </verse>
   
 <h3>CHORUS</h3>
@@ -50,24 +52,27 @@ I just called to say I love you,
 and I mean it from the bottom of my heart. 
 </verse>
   
-<h3>VERSE 2</h3>
+<h3 class="column-break">VERSE 2</h3>
 <verse two-line nochords>
             C     G       C  G
 No summer`s high, no warm July, 
            C                               Dm  DmM7 
-no harvest moon to light one tender August night. 
+No harvest moon to light one tender August night. 
           Dm      DmM7       Dm    DmM7 
 No autumn breeze, no falling leaves, 
          Dm                G               C
-not even time for birds to fly to southern skies. 
+Not even time for birds to fly to southern skies. 
+</verse>
+
+<verse two-line nochords>
          C    G        C  G                 
 No Libra Sun, no Halloween, 
           C                                   Dm   DmM7 
-no giving thanks to all the Christmas joy you bring. 
+No giving thanks to all the Christmas joy you bring. 
             Dm  DmM7           Dm  DmM7 
 But what it is, though old, so new. 
              Dm                  G                C 
-to fill your heart like no three words could ever do. 
+To fill your heart like no three words could ever do. 
 </verse>
 
 <p>(CHORUS)
