--- a/west-side-soul/042 - Send Me On My Way.html
+++ b/west-side-soul/042 - Send Me On My Way.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Send Me On My Way</title>
 <meta name="artist" value="Rusted Root">
+<meta name="songid" value="42">
 </head>
 <body>
 
