--- a/west-side-soul/043 - All You Need Is Love.html
+++ b/west-side-soul/043 - All You Need Is Love.html
@@ -5,6 +5,7 @@
 <title>All You Need Is Love</title>
 <meta name="artist" value="The Beatles">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_beatles/all_you_need_is_love_ver3_crd.htm">
+<meta name="songid" value="43">
 </head>
 <body>
 
@@ -26,10 +27,10 @@ G                        D                Em
  There's nothing you can do that can't be done
 G                 D                  Em   
  Nothing you can sing that can't be sung
-Am                G               D                  
- Nothing you can say but you can learn
-
- to play the game,
+Am                G 
+ Nothing you can say
+              D
+ but you can learn to play the game,
       D       D7      Bm      D    
  It's easy
 </verse>
@@ -61,12 +62,11 @@ All you need is love love, Love is all you need.
 
 <pre>
 [Instrumental break] 
-(same chords as verse)
 
-G D Em 
-G D Em
-Am G D
-D D7 G D
+G   D   Em 
+G   D   Em
+Am  G   D
+D   D7  G   D
 </pre>
 
 
@@ -77,8 +77,10 @@ G                        D               Em
  There's nothing you can know that isn't known.
 G                D              Em   
  Nothing you can see that isn't shown.
-Am               G              D
- Nowhere you can be that isn't where you're meant to be,
+Am               G           
+ Nowhere you can be that isn't
+  D
+ where you're meant to be,
       D       D7      Bm      D    
  It's easy
 </verse>
