--- a/west-side-soul/052 - I Feel Good.html
+++ b/west-side-soul/052 - I Feel Good.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>I Feel Good</title>
 <meta name="artist" value="James Brown">
+<meta name="songid" value="52">
 </head>
 <body>
 
