--- a/west-side-soul/053 - Dancing Queen.html
+++ b/west-side-soul/053 - Dancing Queen.html
@@ -35,8 +35,7 @@ You're in the [F#m]mood for a dance[E  F#m]
 And when you [Bm]get the chance [E7]
 </verse>
 
-<div class="keep-together">
-<h3>CHORUS</h3>
+<h3 class="column-break">CHORUS</h3>
 <verse>
 You are the [A]dancing queen
 [D]Young and sweet, only [A]seventeen [D]
@@ -47,7 +46,6 @@ You are the [A]dancing queen
 [D]See that girl, [Bm]watch that scene
 Dig in the [A]dancing queen
 </verse>
-</div>
 
 <h3>VERSE 3</h3>
 
