--- a/west-side-soul/055 - Dont Stop Believing.html
+++ b/west-side-soul/055 - Dont Stop Believing.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Don't Stop Believing</title>
 <meta name="artist" value="Journey">
+<meta name="songid" value="55">
 </head>
 <body>
 
@@ -52,7 +53,7 @@ Hidin' somewhere in the night
 
 <p><i>(Instrumental interlude)</i>
 
-<verse two-lines>
+<verse two-line>
 E             B       C#m            A      #
 Don't stop believing hold on to the feeling
 E          B           G#m   A
