--- a/west-side-soul/060 - No Woman No Cry.html
+++ b/west-side-soul/060 - No Woman No Cry.html
@@ -4,10 +4,11 @@
 <script src="app.js" type="text/javascript"></script>
 <title>No Woman, No Cry</title>
 <meta name="artist" value="Bob Marley">
+<meta name="songid" value="60">
 </head>
 <body>
 
-<pre>C  G  Am  F  C  F  C  G (4 times)</pre>
+<p><code>C  G  Am  F  C  F  C  G</code> (x4)
 
 <verse two-line>
   C       G       Am     F 
@@ -20,7 +21,7 @@ No woman, no cry,
 No woman, no cry.    Said, said,
 </verse>
 
-<verse>
+<verse two-line>
      C       G            Am       F 
 Said I remember when we used to sit
     C                G            Am  F 
