--- a/west-side-soul/104 - Sweet Home Alabama.html
+++ b/west-side-soul/104 - Sweet Home Alabama.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Sweet Home Alabama</title>
 <meta name="artist" value="Lynyrd Skynyrd">
+<meta name="songid" value="104">
 </head>
 <body>
 
