--- a/west-side-soul/134 - Rivers and Roads.html
+++ b/west-side-soul/134 - Rivers and Roads.html
@@ -30,7 +30,6 @@ And I [Am]guess it's [F]just as [C]well
 But I [Am]miss your [F]face like [C]hell
 </verse>
 
-<div class="keep-together">
 <h3>CHORUS</h3>
 
 <verse>
@@ -40,20 +39,17 @@ But I [Am]miss your [F]face like [C]hell
 [C]Ohhhhh   [Am]ohhhh  [C]oh  
 [Am]Ohhhh[F]hhhhh  [C]ohhhhh
 </verse>
-</div>
 
-<div class="keep-together">
-<h3>VERSE 2</h3>
+<h3 class="column-break">VERSE 2</h3>
 
 <verse>
-Been [C]talking bout the [Am]way things [C]change  [C]
+Been [C]talking 'bout the [Am]way things [C]change  [C]
 And my [C]family [Am]lives in a [F]different [C]state  [C]
 And if you [Am]don't know [F]what to [C]make of this
 Then [Am]we will [F]not [C]relate
 So if you [Am]don't know [F]what to [C]make of this
 Then [Am]we will [F]not [C]relate
 </verse>
-</div>
 
 <p>(CHORUS x2)
 
