--- a/west-side-soul/136 - Bad Day.html
+++ b/west-side-soul/136 - Bad Day.html
@@ -8,7 +8,7 @@
 <meta name="songid" value="136">
 </head>
 <body>
-<p>Capo 1st fret
+<p><i>Capo 1st fret</i>
 <p>Intro: D  G  A  G
 
 <verse>
@@ -43,7 +43,7 @@ You had a bad d[Em]ay   [A]
 You had a bad [D]day 
 </verse>
 
-<p>D G A G   x 2 
+<p><code>D G A G</code> x2 
 
 <h3>BRIDGE</h3>
 
