--- a/west-side-soul/137 - Keep Your Heart Young.html
+++ b/west-side-soul/137 - Keep Your Heart Young.html
@@ -8,7 +8,7 @@
 <meta name="songid" value="137">
 </head>
 <body>
-<p> Capo 4
+<p><i>Capo 4</i>
 
 <h3>VERSE 1</h3>
 
@@ -40,6 +40,7 @@ It stung like hell so I jerked my leg and momma [A]said it'd give me [D]guts
 
 <p>(CHORUS)
 
+<div class="keep-together">
 <h3>VERSE 3</h3>
 <verse>
 So take a picture of the one you love and [G]put it in a [D]locket
@@ -47,6 +48,7 @@ Go dig up your time capsule and the [A]blue prints for your rocket
 [D]Keep in touch on a fake CB, that [G]same old tic-tac [D]box
 Pack your snowballs a little less tight but in the [A]middle still put [D]rocks
 </verse>
+</div>
 
 <h3>BRIDGE</h3>
 <verse>
