--- a/west-side-soul/A02 - This Land Is Your Land.html
+++ b/west-side-soul/A02 - This Land Is Your Land.html
@@ -56,5 +56,5 @@ Nobody living can make me turn back
 This land was made for you and me.
 </verse>
 
-<p>(Repeat Chorus 2x)
+<p>(Repeat Chorus x2)
 
