--- a/west-side-soul/A04 - American Pie.html
+++ b/west-side-soul/A04 - American Pie.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>American Pie</title>
 <meta name="artist" value="Don McLean">
+<meta name="songid" value="A04">
 <style>
 h3 {
   break-after: avoid;
@@ -22,21 +23,15 @@ h3 {
 }
 
 @page :left {
-  margin-left: 1in;
+  margin-left: 0.75in;
   margin-right: 0in;
   margin-top: 0.5in;
-  @top-center {
-    content: "This is the TOP on the left page";
-  }
 }
 
 @page :right {
   margin-left: 0in;
-  margin-right: 1in;
+  margin-right: 0.75in;
   margin-top: 0.5in;
-  @top-center {
-    content: "This is the TOP on the right page";
-  }
 }
 
 </style>
@@ -65,7 +60,6 @@ But, [G]something [D/F#]touched me [Em]deep inside
 The [C]day the [D]music [G]died. So ...
 </verse>
 
-<div class="keep-together">
 <h3>CHORUS</h3>
 
 <verse>
@@ -75,9 +69,7 @@ And them [G]good ole [C]boys were drinking [G]whiskey and [D]rye
 Singing, [Em]this'll be the day that I [A7]die
 [Em]This'll be the day that I [D7]die
 </verse>
-</div>
 
-<div class="keep-together">
 <h3>VERSE 1</h3>
 <verse>
 [G]Did you write the [Am]book of love
@@ -93,11 +85,11 @@ Man, [C]I dig those rhythm and [D7]blues
 I was a [G]lonely [D/F#]teenage [Em]broncin' buck
 With a [Em]pink carnation and a [C]pick-up truck
 But, I [G]knew [D/F#]I was [Em]out of luck
-The [C]day the [D]music [G]died.....[C].....[G].....[D].... I started singing...
+The [C]day the [D]music [G]died.....[C].....[G].....[D]....
+I started singing...
 </verse>
-</div>
 
-<h3>VERSE 2</h3>
+<h3 class="column-break">VERSE 2</h3>
 
 <verse>
 Now, for ten years we've been on our own
@@ -113,10 +105,10 @@ No verdict was returned
 And while Lennon read a book on Marx
 The quartet practiced in the park
 And we sang dirges in the dark
-The day the music died... we were singing...
+The day the music died...
+We were singing...
 </verse>
 
-<div class="keep-together">
 <h3>VERSE 3</h3>
 
 <verse>
@@ -133,11 +125,11 @@ Oh but, we never had the chance
 'Cause the players tried to take the field
 The marching band refused to yield
 Do you recall what was revealed
-The day the music died... we were singing...
+The day the music died...
+We were singing...
 </verse>
-</div>
 
-<h3>VERSE 4</h3>
+<h3 class="column-break">VERSE 4</h3>
 
 <verse>
 Oh, and there we were all in one place
@@ -153,10 +145,10 @@ Could break that Satan's spell
 And as the flames climbed high into the night
 To light the sacrificial rite
 I saw Satan laughing with delight
-The day the music died... we were singing...
+The day the music died...
+We were singing...
 </verse>
 
-<div class="keep-together">
 <h3>VERSE 5</h3>
 
 <verse>
@@ -173,9 +165,9 @@ The church bells all were broken
 And the three men I admire most
 The Father, Son, and the Holy Ghost
 They caught the last train for the coast
-The day the music died... and they were singing...
+The day the music died...
+And they were singing...
 </verse>
 <p>(Repeat CHORUS x 2)
-</div>
 </div>
 
