--- a/west-side-soul/A06 - Let It Be.html
+++ b/west-side-soul/A06 - Let It Be.html
@@ -5,6 +5,7 @@
 <title>Let It Be</title>
 <meta name="artist" value="The Beatles">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_beatles/let_it_be_ver6_crd.htm">
+<meta name="songid" value="A06">
 </head>
 <body>
 
