--- a/west-side-soul/A07 - Closing Time.html
+++ b/west-side-soul/A07 - Closing Time.html
@@ -5,6 +5,7 @@
 <title>Closing Time</title>
 <meta name="artist" value="Semisonic">
 <meta name="source" value="https://tabs.ultimate-guitar.com/s/semisonic/closing_time_crd.htm">
+<meta name="songid" value="A07">
 </head>
 <body>
 
