--- a/west-side-soul/A09 - You Cant Always Get What You Want.html
+++ b/west-side-soul/A09 - You Cant Always Get What You Want.html
@@ -5,6 +5,7 @@
 <title>You Can't Always Get What You Want</title>
 <meta name="artist" value="Rolling Stones">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_rolling_stones/you_cant_always_get_what_you_want_ver3_crd.htm">
+<meta name="songid" value="A09">
 </head>
 <body>
 
