--- a/west-side-soul/A10 - Blackbird.html
+++ b/west-side-soul/A10 - Blackbird.html
@@ -5,6 +5,8 @@
 <title>Blackbird</title>
 <meta name="artist" value="The Beatles">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_beatles/blackbird_ver5_crd.htm">
+<!-- XXX review layout -->
+<meta name="songid" value="A10">
 </head>
 <body>
 
@@ -38,9 +40,8 @@ G/B           A7/C#            Am7/D D7       G
 You were only waiting for this moment to be free
 </verse>
 
-
+<br/>
 <div class="columns2">
-<div class="keep-together">
 <h3>CHORUS</h3>
 
 <verse two-line>
@@ -68,11 +69,8 @@ Black----------bird     fly,
           Dm7         G/D           G
 Into the light of the dark black night
 </verse>
-</div>
 
-<div class="keep-together">
-<p>&nbsp;
-<verse two-line>
+<verse class="column-break" two-line>
 G        Am7             G/B     G
 Blackbird singing in the dead of night
 C          A7/C#   D7       B7/D#      Em    Gaug/Eb
@@ -86,7 +84,6 @@ You were only waiting for this moment to arise
 G/B           A7/C#            Am7/D D7       G
 You were only waiting for this moment to arise
 </verse>
-</div>
 </div>
 
 </body>
