--- a/west-side-soul/A11 - Youre Beautiful.html
+++ b/west-side-soul/A11 - Youre Beautiful.html
@@ -3,8 +3,9 @@
 <link rel="stylesheet" href="app.css"/>
 <script src="app.js" type="text/javascript"></script>
 <title>You're Beautiful</title>
-<meta name="artist" value="James BLunt">
+<meta name="artist" value="James Blunt">
 <meta name="source" value="https://tabs.ultimate-guitar.com/j/james_blunt/youre_beautiful_crd.htm">
+<meta name="songid" value="A11">
 </head>
 <body>
 <p><i>Capo 8th fret</i>
