--- a/west-side-soul/A13 - Wherever You Will Go.html
+++ b/west-side-soul/A13 - Wherever You Will Go.html
@@ -6,6 +6,7 @@
 <title>Wherever You Will Go</title>
 <meta name="artist" value="The Calling">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_calling/wherever_you_will_go_acoustic_crd.htm">
+<meta name="songid" value="A13">
 </head>
 <body>
 
