--- a/west-side-soul/024 - Cats in the Cradle.html
+++ b/west-side-soul/024 - Cats in the Cradle.html
@@ -4,7 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Cat's in the Cradle</title>
 <meta name="artist" value="Harry Chapin">
-<meta name="songid" value=24>
+<meta name="songid" value="24">
 </head>
 <body>
 <div class="columns1">
@@ -37,7 +37,6 @@ And he walked away, but his smile never dimmed.
 It said, "I'm gonna be like him, yeah.  You know I'm gonna be like him."
 </verse>
 
-<div class="keep-together">
 <h3>VERSE 3</h3>
 <verse>
 Well, he came home from college just the other day,
@@ -47,10 +46,8 @@ He shook his head and he said with a smile,
 "What I'd really like, Dad, is to borrow the car keys.
 See you later.  Can I have them please?"
 </verse>
-</div>
 
-<div class="keep-together">
-<h3>VERSE 4</h3>
+<h3 class="page-break">VERSE 4</h3>
 <verse>
 I've long since retired, my son's moved away.
 I called him up just the other day.
@@ -59,7 +56,6 @@ He said, "I'd love to, Dad, if I could find the time.
 You see, my new job's a hassle and the kids have the flu,
 But it's sure nice talkin' to you, Dad.  It's been sure nice talkin' to you."
 </verse>
-</div>
 
 <verse>
 An[D]d as I [A]hung up the [Bm]phone it oc[A]cured to me,
