--- a/west-side-soul/029 - I Will Survive.html
+++ b/west-side-soul/029 - I Will Survive.html
@@ -11,9 +11,12 @@
 <h3>VERSE 1</h3>
 <verse>
 At f[Am]irst I was afraid, I was p[Dm]etrified
-Kept thinkin' [G7]I could never live without you [Cmaj7]by my side
-Then I s[Fmaj7]pent so many nights thinking [Bm7b5]how you did me wrong
-And I grew st[E]rong, and I learned h[E7]ow to get along
+Kept thinkin' [G7]I could never live
+Without you [Cmaj7]by my side
+Then I s[Fmaj7]pent so many nights
+Thinking [Bm7b5]how you did me wrong
+And I grew st[E]rong,
+And I learned h[E7]ow to get along
 </verse>
 
 <verse>
@@ -39,8 +42,7 @@ Did you think I'd crumble?
 Did you think I'd lay down and die?
 </verse>
 
-<div class="keep-together">
-<h3>CHORUS</h3>
+<h3 class="column-break">CHORUS</h3>
 
 <verse>
 Oh not I. 
@@ -52,7 +54,6 @@ I've got all my love to give.
 I will survive.
 I will survive. 
 </verse>
-</div>
 
 <h3>VERSE 2</h3>
 <verse>
