--- a/west-side-soul/030 - For What Its Worth.html
+++ b/west-side-soul/030 - For What Its Worth.html
@@ -4,7 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>For What It's Worth</title>
 <meta name="artist" value="Buffalo Springfield">
-<meta name="songid" value="25">
+<meta name="songid" value="30">
 </head>
 <body>
 
@@ -36,7 +36,6 @@ A                     C           E A E A
 Everybody look what's goin' down.
 </verse>
 
-<div class="keep-together">
 <h3>VERSE 2</h3>
 <verse two-line>
 E                          A
@@ -50,10 +49,8 @@ A-gettin' so much resistance from behind.
 </verse>
 
 <p>(CHORUS)
-</div>
 
-<div class="keep-together">
-<h3>VERSE 3</h3>
+<h3 class="column-break">VERSE 3</h3>
 <verse two-line nochords>
 E                        A       G
 What a field day for the heat.
@@ -66,7 +63,6 @@ Mostly sayin' hooray for our side.
 </verse>
 
 <p>(CHORUS)
-</div>
 
 <h3>VERSE 4</h3>
 <verse two-line nochords>
@@ -76,8 +72,10 @@ Paranoia strikes deep.
 Into your life it will creep.
 E                            A
 It starts when you're always afraid.
-            E                      A
-Step out of line, the men come and take you away.
+            E   
+Step out of line,
+                 A
+The men come and take you away.
 </verse>
 
 <h3>CHORUS / OUTRO</h3>
@@ -87,25 +85,25 @@ You better stop.
  E                D
 Hey, what's that sound?
 A                     C           
-Everybody look what's goin'..
+Everybody look what's goin'...
            E
 You better stop.
                  D
 Hey, what's that sound?
 A                                
-Everybody look what's goin'..
+Everybody look what's goin'...
            E
 You better stop.
                 D
 Now, what's that sound?
 A                                
-Everybody look what's goin'..
+Everybody look what's goin'...
            E
 You better stop.
           D
 Children, what's that sound? (fade out)
 A                               
-Everybody look what's goin  
+Everybody look what's goin'...
 </verse>
 </div>
 
