--- a/west-side-soul/036 - Piano Man.html
+++ b/west-side-soul/036 - Piano Man.html
@@ -6,15 +6,16 @@
 <meta name="artist" value="Billy Joel">
 <meta name="source" value="http://sites.google.com/site/guitarmusicchordsandlyrics/">
 <meta name="source" value="https://tabs.ultimate-guitar.com/b/billy_joel/piano_man_ver5_crd_1051336id_06052011date.htm">
+<meta name="songid" value="36">
 </head>
 <body>
 
 <div class="columns2">
 
+<h3>INTRO</h3>
 <pre>
-[Intro]
-
-C G F C F C D7 G  C G F C  F G C   G
+C G F C  F C D7  G
+C G F C  F G C   G
 </pre>
 
 <verse two-line>
@@ -33,8 +34,10 @@ Making love to his tonic and gin
 He says, "Son, can you play me a memory
     F          C           D7  G
 I'm not really sure how it goes
-         C            G           F          C
-But it's sad and it's sweet and I knew it complete
+         C            G   
+But it's sad and it's sweet
+      F          C
+And I knew it complete
      F        G             C
 When I wore a younger man's clothes."
 </verse>
@@ -66,8 +69,10 @@ And you've got us all feeling alright
 Now John at the bar is a friend of mine
    F          C          D7  G
 He gets me my drinks for free
-         C            G              F             C
-And he's quick with a joke and he'll light up your smoke
+         C            G  
+And he's quick with a joke
+          F             C
+And he'll light up your smoke
             F               G           C   G
 But there's some place that he'd rather be
 </verse>
@@ -83,11 +88,12 @@ As the smile ran away from his face
 If I could get out of this place"
 </verse>
 
-[Interlude]
-
-<verse two-line nochords>
+<!--
+<h3>INTERLUDE</h3>
+-->
+<verse two-line >
 Am              D7
-la la la, di da da
+La la la, di da da
 Am           D7    G  F C G7
 La la, di di da da dum
 </verse>
@@ -100,8 +106,10 @@ La la, di di da da dum
 Now Paul is a real estate novelist
     F         C          D7  G
 Who never had time for a wife
-         C            G           F            C
-And he's talking with Davy, who's still in the Navy
+         C            G   
+And he's talking with Davy,
+      F            C
+Who's still in the Navy
     F             G      C   G
 And probably will be for life
 </verse>
@@ -124,8 +132,10 @@ But it's better than drinking alone
 It's a pretty good crowd for a Saturday
         F       C          D7    G
 And the manager gives me a smile
-          C               G               F         C
-'Cause he knows that it's me they've been coming to see
+          C               G 
+'Cause he knows that it's me
+             F         C
+They've been coming to see
    F            G           C   G
 To forget about life for a while
 </verse>
@@ -143,9 +153,9 @@ And say, "Man, what are you doing here?"
 
 <!-- [Interlude] -->
 
-<verse two-line nochords>
+<verse two-line>
 Am              D7
-la la la, di da da
+La la la, di da da
 Am           D7    G  F C G7
 La la, di di da da dum
 </verse>
