--- a/west-side-soul/047 - Turn Turn Turn.html
+++ b/west-side-soul/047 - Turn Turn Turn.html
@@ -5,9 +5,11 @@
 <title>Turn, Turn, Turn</title>
 <meta name="artist" value="The Byrds">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_byrds/turn_turn_turn_ver3_crd.htm">
+<meta name="songid" value="47">
 </head>
 <body>
 
+<div class="columns2">
 <h3>CHORUS</h3>
 <verse two-line>
         D       G     F#m   A
@@ -30,7 +32,6 @@ A time to kill, a time to heal
 A time to laugh, a time to weep
 </verse>
 
-<div class="columns2">
 <verse>
 To everything, (turn, turn, turn)
 there is a season; (turn, turn, turn)
@@ -45,7 +46,7 @@ A time to cast away stones,
 A time to gather stones together
 </verse>
 
-<verse>
+<verse class="column-break">
 To everything, (turn, turn, turn)
 there is a season; (turn, turn, turn)
 and a time to every purpose, under
@@ -75,7 +76,7 @@ A time to gain, a time to lose
 A time to rend, a time to sew
 A time for love, a time to hate
 A time for peace, 
-I swear it s not too late
+I swear it's not too late
 </verse>
 </div>
 
