--- a/west-side-soul/054 - Man In The Mirror.html
+++ b/west-side-soul/054 - Man In The Mirror.html
@@ -4,195 +4,138 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Man In The Mirror </title>
 <meta name="artist" value="Michael Jackson">
+<meta name="songid" value="54">
 <meta name="source" value="https://tabs.ultimate-guitar.com/m/michael_jackson/man_in_the_mirror_ver7_crd.htm">
 </head>
-<style>
-pre { font-size: 10pt }
-</style>
 <body>
+<div class="columns2">
+<!--
 <pre>
 [Intro]
-| G D/F# | Em D | C(add9) | C(add9) [ C/D ] |
-
-
-[Verse]
-G          D/F#
- I'm gonna make a change
-Em    D           C(add9)   [ C/D ]
-  For once in my life
-           G         D/F#
-It's gonna feel real good
-             Em                D       C(add9)
-Gonna make a difference, gonna make it right
-
-
-[Verse]
-    G            D/F#
-As I turn up the collar on
-Em           D           
- My favorite winter coat
-C(add9)                          [ C/D ]
- This wind is blowing my mind
-          G           D/F#
-I see the kids in the street
-         Em
-With not enough to eat
-D         C(add9)
- Who am I to be blind? Pretending not to see their needs
-
-
-[Bridge]
-Am7                   G/B
- A summer's disregard, a broken bottle top
-C(add9)
- And one man's soul (and a one man's soul)
-     Am7                      G/B
-They follow each other on the wind ya' know
-            C(add9)        C/D                             [ G ]
-'Cause they got nowhere to go, that's why I want you to know
-
-
-[Chorus]
-G    G/B               C          D7sus4
- I'm starting with the man in the mirror
-G    G/B           C          D7sus4
- I'm asking him to change his ways
-G       G7/B               C        C#dim
- And no message could have been any clearer
-       Csus4/D
-If you want to make the world a better place
-       Csus4/D                              [ G ]
-Take a look at yourself, and then make a change
-
-
-[Interlude]
-| G D/F# | Em D | C(add9) | C(add9) [ C/D ] |
-           (Na, na, na, ...)
-
-
-[Verse]
-G            D/F#     Em         D
- I've been a victim of a selfish kind of love
-C(add9)         
- It's time that I realize
-               G            D/F#        Em             [ D ]
-That there are some with no home, not a nickel to loan
-D            C(add9)               
- Could it be really me, pretending that they're not alone?
-
-
-[Bridge]
-Am7                      G/B
- A willow deeply scarred, somebody's broken heart
-C(add9)           G/B
- And a washed-out dream
-     Am7                       G/B
-They follow the pattern of the wind ya' see
-            C(add9)         C/D                               [ G ]
-'Cause they got no place to be, that's why I'm starting with me
-
-
-[Chorus]
-G    G/B               C          D7sus4
- I'm starting with the man in the mirror
-G    G/B           C          D7sus4
- I'm asking him to change his ways
-G       G/B                C        C#dim
- And no message could have been any clearer
-       Csus4/D
-If you want to make the world a better place
-       Csus4/D                              [ G ]
-Take a look at yourself, and then make a change
-
-
-[Chorus]
-G    G/B               C          D7sus4
- I'm starting with the man in the mirror
-G    G/B           C          D7sus4
- I'm asking him to change his ways
-G       G/B                C        C#dim
- And no message could have been any clearer
-       Csus4/D
-If you want to make the world a better place
-       Csus4/D                    Csus4/D Csus4/D [ break ]
-Take a look at yourself, and then make    that
-
-
-[Chorus]
-Ab          Ab/C              Db         Db/Eb
-Change! I'm starting with the man in the mirror
-Ab   Ab/C          Db         Db/Eb
- I'm asking him to change his ways
-Ab  Ab/C               Db       Ddim
- No message could have been any clearer
-       Dbsus4/Eb
-If you want to make the world a better place
-       Dbsus4/Eb   
-Take a look at yourself and then make the change
-          Dbsus4/Eb
-You gotta get it right, while you got the time
-          Dbsus4/Eb            Dbsus4/Eb Dbsus4/Eb   [ Ab ]
-You can't close your, then you close     your,       mind!
-
-
-[Chorus]
-Ab   Ab/C              Db         Db/Eb
- I'm starting with the man in the mirror
-Ab   Ab/C          Db         Db/Eb
- I'm asking him to change his ways
-Ab  Ab/C               Db       Ddim
- No message could have been any clearer
-       Dbsus4/Eb
-If you want to make the world a better place
-       Dbsus4/Eb   
-Take a look at yourself and then make the change
-
-[Interlude]
-| Ab Eb/G | Fm Eb | Db(add9) | % | 
-             Na, na, na ...
-| Ab Eb/G | Fm Eb | Db(add9) break
-             Na, na, na ...
-
-
-CODA
-| Db(add9) | 
-(repeat, vocals ad lib)
-
-I'm gonna make a change
-It's gonna feel real good!
-Chime on!
-(Change)
-Just lift yourself
-You know
-You've got to stop it
-Yourself!
-(Yeah! Make that change!)
-I've got to make that change, today!
-Hoo!
-(Man in the mirror)
-You got to
-You got to not let yourself
-Brother
-Hoo!
-(Yeah! Make that change!)
-You know, I've got to get
-That man, that man
-(Man in the mirror)
-You've got to move! Chime on!
-Chime on!
-You got to
-Stand up! Stand up! Stand up!
-(Yeah! Make that change)
-Stand up and lift yourself, now!
-(Man in the mirror)
-You know it!
-You know it!
-You know it!
-You know it
-
-Db(add9)
-  (Change) Make that change
+| G D/F# | Em D | C(add9) | C(add9) [C/D] |
 </pre>
+-->
+
+<verse two-line full-lines>
+G         D/F#        Em 
+I'm gonna make a change, 
+D              C
+For once in my life
+           G         D/F#    Em     
+It's gonna feel real good
+             Em
+Gonna make a difference
+D             C
+Gonna make it right
+</verse>
+
+<br/>
+<verse two-line full-lines>
+     G        D/F#         
+As I, turn up the collar on
+Em           D
+My favorite winter coat,
+C
+This wind is blowin' my mind
+          G           D/F#  
+I see the kids in the street,
+         Em            D
+With not enough to eat
+          C
+Who am I, to be blind,
+
+Pretending not to see their needs
+</verse>
+
+<br/>
+<verse two-line>
+Am7                  C/B
+A summer's disregard,
+
+A broken bottle top
+C                 C/B
+And a one man's soul
+     Am7                      C/B
+They follow each other on the wind ya' know
+            C                 D
+'Cause they got nowhere to go
+                              G
+That's why I want you to know
+</verse>
+
+<h3 class="column-break">CHORUS</h3>
+<verse two-line full-lines>
+G   G/B               C          D
+I'm starting with the man in the mirror
+G   G/B           C          D
+I'm asking him to change his ways
+G      G/B                C        A/C#
+And no message could have been any clearer
+        Dm
+If you wanna make the world a better place
+     
+Take a look at yourself,
+                     G   D/F#
+And then make a change
+</verse>
+
+<br/>
+<verse two-line full-lines>
+G           D/F#      Em        D
+I've been a victim of a selfish kind of love
+C
+It's time that I realize
+          G            D/F#
+There are some with no home,
+      Em             D
+Not a nickel to loan
+            C
+Could it be really me
+
+Pretending that they're not alone?
+</verse>
+
+<br/>
+<verse>
+Am7                     C/B
+A willow deeply scarred
+
+Somebody's broken heart
+C                C/B
+And a washed-out dream
+     Am7                       C/B
+They follow the pattern of the wind, ya' see
+            C                  D
+'Cause they got no place to be
+                               G
+That's why I'm starting with me
+</verse>
+<p>(CHORUS)
+
+<!--
+<verse two-line nochords>
+G           D/F#      Em        D            C
+I've been a victim of a selfish kind of love, It's time that I realize
+          G            D/F#        Em             D
+There are some with no home, not a nickel to loan
+            C
+Could it be really me, pretending that they're not alone?
+</verse>
+
+<verse two-line nochords>
+Am7                     C/B
+ A willow deeply scarred, somebody's broken heart
+C                 C/B
+ And a washed-out dream
+     Am7                       C/B
+They follow the pattern of the wind, ya' see
+            C                 D
+'Cause they got no place to be
+                               G
+That's why I'm starting with me    [CHORUS]
+</verse>
+-->
+</div>
 
 </body>
 </html>
