--- a/west-side-soul/063 - Born To Be Wild.html
+++ b/west-side-soul/063 - Born To Be Wild.html
@@ -4,12 +4,14 @@
 <script src="app.js" type="text/javascript"></script>
 <title>Born To Be Wild</title>
 <meta name="artist" value="Steppenwolf">
+<style>
+  @page :first { page-break-before: left; }
+</style>
+<meta name="songid" value="63">
 </head>
 <body>
 
 <div class="columns2">
-<div class="keep-together">
-<div class="keep-together">
 <h3>VERSE 1</h3>
 <verse two-line>
 Em      A         E
@@ -22,7 +24,7 @@ G       A         E
 And whatever comes our way
 </verse>
 
-<verse two-lines>
+<verse two-line>
 G     A         E
 Yeah Darlin' go make it happen
 G        A          E
@@ -32,10 +34,8 @@ Fire all of your guns at once
    G    A        E
 And explode into space
 </verse>
-</div>
 
-<div class="keep-together">
-<h3>VERSE 2</h3>
+<h3 class="column-break">VERSE 2</h3>
 <verse>
 I like smoke and lightning
 Heavy metal thunder
@@ -49,8 +49,6 @@ Take the world in a love embrace
 Fire all of your guns at once
 And explode into space
 </verse>
-</div>
-</div>
 
 <h3>CHORUS</h3>
 <verse two-line>
