--- a/west-side-soul/068 - If I Had A Million Dollars.html
+++ b/west-side-soul/068 - If I Had A Million Dollars.html
@@ -4,6 +4,7 @@
 <script src="app.js" type="text/javascript"></script>
 <title>If I Had a Million Dollars</title>
 <meta name="artist" value="Barenaked Ladies">
+<meta name="songid" value="68">
 </head>
 <body>
 <div class="columns2">
