--- a/west-side-soul/086 - Ho Hey.html
+++ b/west-side-soul/086 - Ho Hey.html
@@ -3,8 +3,9 @@
 <link rel="stylesheet" href="app.css"/>
 <script src="app.js" type="text/javascript"></script>
 <title>Ho Hey</title>
-<meta name="artist" value="Lumineers">
+<meta name="artist" value="The Lumineers">
 <meta name="source" value="https://tabs.ultimate-guitar.com/t/the_lumineers/ho_hey_ver6_crd.htm">
+<meta name="songid" value="86">
 </head>
 <body>
 
@@ -45,7 +46,6 @@ F C     F C      F C     F C      F
 (Ho!) But I can write a song (Hey!) (2 - 3) 
 </verse>
 
-<div class="keep-together">
 <h3>CHORUS</h3>
 <verse two-line>
                Am                   G
@@ -57,9 +57,8 @@ I belong with you, you belong with me
               F   C     F C     F C    F C    F
 you're my sweet&mdash; (Ho!)  (Hey!)  (Ho!)  (Hey!)
 </verse>
-</div>
 
-<verse>
+<verse class="column-break">
 (Ho!) I don't think you're right for him
 (Hey!) think of what it might have been if you
 (Ho!) took a bus to Chinatown
