--- a/west-side-soul/header.html
+++ b/west-side-soul/header.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="UTF-8">
 <link rel="stylesheet" href="app.css"/>
 <script src="app.js" type="text/javascript"></script>
 <title>Old Dan Tucker</title>
