--- a/west-side-soul/index.html
+++ b/west-side-soul/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <script src="contents.js" type="text/javascript"></script>
 <script src="songs.js" type="text/javascript"></script>
 <style>
@@ -87,7 +88,7 @@ h3 {
 3. FOR PETE'S SAKE - The Mandos
 </contents>
 
-<h3>Traditional/Classic Songs</h3>
+<h3>Traditional / Classic Songs</h3>
 
 <contents>
 4. WAGON WHEEL - Old Crow Medicine Show
