--- a/west-side-soul/index.html
+++ b/west-side-soul/index.html
@@ -87,7 +87,7 @@ h3 {
 3. FOR PETE'S SAKE - The Mandos
 </contents>
 
-<h3>Traditional / Classic Songs</h3>
+<h3>Traditional x / Classic Songs</h3>
 
 <contents>
 4. WAGON WHEEL - Old Crow Medicine Show
