--- a/west-side-soul/index.html
+++ b/west-side-soul/index.html
@@ -45,6 +45,8 @@ a, a:visited, a:hover, a:active {
   width: 2em;
   padding-right: 1em;
   vertical-align: text-top;
+  font-family: 'Roboto', "Times New Roman";
+  font-size: 11pt;
 }
 .songid::after {
   content: ".";
@@ -53,9 +55,13 @@ a, a:visited, a:hover, a:active {
   display: inline-block;
   width: 3.7in;
   vertical-align: text-top;
+  font-family: 'Roboto', "Times New Roman";
+  font-size: 11pt;
 }
 .artist {
   vertical-align: text-top;
+  font-family: 'Roboto', "Times New Roman";
+  font-size: 11pt;
 }
 body {
   font-family: 'Roboto', "Times New Roman";
@@ -87,7 +93,7 @@ h3 {
 3. FOR PETE'S SAKE - The Mandos
 </contents>
 
-<h3>Traditional x / Classic Songs</h3>
+<h3>Traditional y / Classic Songs</h3>
 
 <contents>
 4. WAGON WHEEL - Old Crow Medicine Show
